@@ -4351,6 +4351,11 @@ end</example>
 			<shortname>set debug keys disable</shortname>
 			<description>Sets whether or not the debugging keys are allowed. If the argument is <ref>off</ref> then debugging keys are allowed. If the argument is <ref>on</ref> then debugging keys are disabled.</description>
 		</command>
+		<command id="setdeadheroesgainexperience">
+			<canon>set dead heroes gain experience (state)</canon>
+			<shortname>set dead heroes gain experience</shortname>
+			<description>Sets whether or not dead heroes gain experience from battles. If the argument is <ref>off</ref> then only living heroes gain experience. If the argument is <ref>on</ref> then dead heroes get it too.</description>
+		</command>
 		<command id="allowminimap">
 			<canon>allow minimap (setting)</canon>
 			<shortname>allow minimap</shortname>
