@@ -1396,6 +1396,9 @@
 		<a href="#about-setdaysofplay">set days of play (days)</a><br>
 		
 	
+		<a href="#about-setdeadheroesgainexperience">set dead heroes gain experience (state)</a><br>
+		
+	
 		<a href="#about-setdeathscript">set death script (id)</a><br>
 		
 	
@@ -8213,6 +8216,14 @@ end</pre>
 			
 			
 		</tt></p>
+		<a name="about-setdeadheroesgainexperience"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">set dead heroes gain experience (state)</font></b><br>
+			Sets whether or not dead heroes gain experience from battles. If the argument is <a href="#about-booleanconstants" class="ref">off</a> then only living heroes gain experience. If the argument is <a href="#about-booleanconstants" class="ref">on</a> then dead heroes get it too.<br>
+			
+			
+		</tt></p>
 		<a name="about-allowminimap"></a>
 		<p>
 		<tt>
@@ -9006,7 +9017,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 654 commands in this file, of which 53 are only references to other commands.</p>
+	<p>Stats: There are 655 commands in this file, of which 53 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
